# misc

./: .gitignore  .gitmodules  README.md  clickables.py  clickables.yml
asus/: README.md  firewall-start
bootstrap/: bootstrap.sh  environment.yml  pyproject.toml
calibre/: README.md
dependencies/: requirements.yml
docker/: README.md  docker.service
fedora-docker/: build.py
fedora-docker/resources/: locale.sh  macros.langs  packages
fedora-docker/resources/releases/centos-6/yum.repos.d/: CentOS-Base.repo  CentOS-fasttrack.repo
fedora-docker/resources/releases/centos-7/yum.repos.d/: CentOS-Base.repo
fedora-docker/resources/releases/fedora-20/yum.repos.d/: fedora-updates.repo
fedora-docker/resources/releases/fedora-21/: yum.conf
fedora-docker/resources/releases/fedora-21/yum.repos.d/: fedora.repo
fedora-docker/resources/yum.repos.d/: fedora-updates-testing.repo
inventory/group_vars/all/: common.yml
journalctl/: README.md
neovim/: README.md
neovim/.local/share/nvim/shada/: main.shada
neovim/config/: init.vim
neovim/share/shada/: main.shada
network-eeepc/etc/hostapd/: hostapd.conf
network-eeepc/etc/sysconfig/network-scripts/: ifcfg-br0  ifcfg-p33p1  ifcfg-wlp1s0
network-eeepc/etc/systemd/system/: bridge-sysctl.service
packagekit/: REDME.md
playbooks/: minecraft.yml  steam.yml
squid/: .gitignore  run_squid.sh  squid.conf.tpl
ssl/: README.rst
synaptics/: 10-synaptics.conf
tmux/: tmux.conf
ubuntu-gnome-shell/: README.md
vim/: .vimrc  README.md  vimrc
